# differ

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  RELEASE.en.md  RELEASE.md  blog-release.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/package-managers/AUR/: PKGBUILD
.github/package-managers/homebrew/Casks/: differ.rb
.github/workflows/: ci.yml  release.yml
scripts/: notarization-setup.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: diff.rs  directory.rs  git.rs  merge.rs  mod.rs  watcher.rs
src-tauri/src/diff/: directory.rs  merge_engine.rs  mod.rs  syntax_diff.rs  text_diff.rs
src-tauri/src/fs/: watcher.rs
src-tauri/src/git/: branch.rs  diff.rs  log.rs  mod.rs  repo.rs  status.rs
src-tauri/test_fixtures/: README.md
src/components/: Dashboard.tsx  DiffView.tsx  DirectoryDiffView.tsx  GitBranchSelector.test.tsx  GitBranchSelector.tsx  GitHistoryView.test.tsx  GitHistoryView.tsx  GitMergeView.test.tsx  GitMergeView.tsx  GitSidebar.test.tsx  GitSidebar.tsx  GitView.test.tsx  GitView.tsx  HistoryView.tsx  MergeView.test.tsx  MergeView.tsx  SettingsView.test.tsx  SettingsView.tsx
src/dsl/: ActionCard.tsx  Card.tsx  EmptyState.tsx  StatCard.tsx  Timeline.tsx  index.ts
src/lib/: dialog.ts  highlight.ts  historyStore.ts  navStore.ts  settings.ts
src/types/: diff.ts  git.ts  history.ts  merge.ts
