[package]
name = "differ"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "differ_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
tokio = { version = "1", features = ["full"] }
rayon = "1"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
proptest = "1"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
