[package]
name = "differ"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "differ_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
tokio = { version = "1", features = ["full"] }
tauri-plugin-store = "2.4.3"
notify = "8.2.0"

# Git integration
git2 = "0.19"

# Error handling
thiserror = "1"

# tree-sitter for syntax-aware diff
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
